--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -25,7 +25,7 @@
             <ul class="nav navbar-left">
                 <li>Classeurs</li>
                 <li><a href="">Nouveau</a></li>
-                <li><a href="">Liste</a></li>
+                <li><a href="{{ path("classeur") }}">Liste</a></li>
                 <li><a href="">Documents</a></li>
                 <li>Administration</li>
                 <li><a href="">Gestion des circuits</a></li>
