--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -44,6 +44,7 @@
 <div class="" id="footer">
     yep c le footer
 </div>
+{% block losjavascriptos %}{% endblock %}
 <script type="text/javascript" src="{{ asset("/bootstrap/js/bootstrap.min.js") }}"></script>
 </body>
 </html>
