Tout pour régis

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -15,7 +15,7 @@
 
 
         <select id="type" name="type">
-            <option value="elclassico">Classique</option>
+            <option value="elclassico" selected>Classique</option>
             <option value="elpez">PESV2</option>
         </select>
 
@@ -28,11 +28,19 @@
         </div>
 
 
+    <div id="contenttypedform"/>
 
-        <div id="contenttypedform"/>
+
+
+
 
 
     </form>
+
+
+
+
+    <br/>
 
         <a href="{{ path('classeur') }}">
             Retour à la liste des classeur
