--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -1,8 +1,10 @@
-{% extends 'SesileMainBundle:Default:index.html.twig' %}
 
-{% block content %}
 
+
+<br/>
     <div class="row">
+
+
 
         <div class="col-md-6">
 
@@ -18,23 +20,13 @@
                         <textarea class="form-control" rows="3" name="desc" id="desc"></textarea>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Remember me
-                            </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Sign in</button>
-                    </div>
-                </div>
-            </form>
+            <div id="circuitcontent"/>
+
 
         </div>
     </div>
 
-{% endblock %}
+
+    {% block extraform %}
+    {% endblock %}
+
