Changed circuit new

--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -21,6 +21,7 @@
                     </div>
                 </div>
             <div id="circuitcontent"/>
+            <div id="documentcontent"/>
 
 
         </div>
