Added new document

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -7,7 +7,7 @@
 
 
 
-<form class="form-horizontal" role="form">
+<form class="form-horizontal" role="form" action="" method="POST">
 
     <div class="row">
 
@@ -19,6 +19,8 @@
             <option value="elpez">PESV2</option>
         </select>
 
+            <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
+
 
 
 
@@ -28,7 +30,9 @@
         </div>
 
 
-    <div id="contenttypedform"/>
+    <div id="contenttypedform"></div>
+
+
 
 
 
