--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -20,14 +20,36 @@
                         <textarea class="form-control" rows="3" name="desc" id="desc"></textarea>
                     </div>
                 </div>
-            <div id="circuitcontent"/>
-            <div id="documentcontent"/>
+            <div id="circuitcontent">
+
+            </div>
+            <div id="documentcontent">
+
+
+            </div>
+
+
 
 
         </div>
+
+
+
     </div>
+
+
+
 
 
     {% block extraform %}
     {% endblock %}
 
+
+
+<div class="row">
+ <br/>
+<!-- Indicates a successful or positive action -->
+<button type="button" class="btn">Annuler</button>
+<button type="button" class="btn btn-success">Envoyer</button>
+
+</div>
