--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'SesileMainBundle:Default:index.html.twig' %}
 
 {% block content %}
-    <h1>Classeur creation</h1>
+    <h1>Nouveau classeur</h1>
 
     <br/>
 
@@ -14,15 +14,18 @@
         <div class="col-md-6">
 
 
-        <select id="type" name="type">
-            <option value="elclassico" selected>Classique</option>
-            <option value="elpez">PESV2</option>
-        </select>
+            <div class="form-group">
+                <label for="type" class="col-sm-2 control-label">Type</label>
+                <div class="col-sm-10">
+                    <select id="type" name="type">
+                        <option value="elclassico" selected>Classique</option>
+                        <option value="elpez">PESV2</option>
+                    </select>
+                    <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
+                </div>
 
-            <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
 
-
-
+            </div>
 
 
           </div>
