Ajout de services pour les documents et les circuits

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -7,7 +7,7 @@
 
 
 
-<form class="form-horizontal" role="form" action="" method="POST">
+<form class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
 
     <div class="row">
 
