--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -50,6 +50,6 @@
  <br/>
 <!-- Indicates a successful or positive action -->
 <button type="button" class="btn">Annuler</button>
-<button type="button" class="btn btn-success">Envoyer</button>
+<button type="submit" class="btn btn-success">Envoyer</button>
 
 </div>
