--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -1,6 +1,20 @@
+{% block css %}
+<link type="text/css" rel="stylesheet" href="{{ asset("/css/circuit.css") }}" />
+{% endblock %}
 <div id="new_circuit_content">
-    Mon cul sur le nouveau circuit
-<input type="hidden" id="newcircuit" name="newcircuit[]" value="1"/>
-<input type="hidden" id="newcircuit" name="newcircuit[]" value="2"/>
-<input type="hidden" id="newcircuit" name="newcircuit[]" value="3"/>
+
+    <select id="users_list">
+        {% for user in users %}
+            <option value="{{ user.id }}">{{ user.username }}</option>
+        {% endfor %}
+    </select>
 </div>
+<script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/js/circuit.js') }}"></script>
+<script type="text/javascript">
+var circuiter = $("#users_list").circuiter({
+    users: new Array(3,1)
+});
+//moncircuit = circuiter.data("circuiter");
+//moncircuit.getCircuit();
+</script>
