--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -1,20 +1,24 @@
-{% block css %}
-<link type="text/css" rel="stylesheet" href="{{ asset("/css/circuit.css") }}" />
-{% endblock %}
 <div id="new_circuit_content">
-
-    <select id="users_list">
-        {% for user in users %}
-            <option value="{{ user.id }}">{{ user.username }}</option>
-        {% endfor %}
-    </select>
+    <div class="selects_circuit">
+        <select id="users_list" size="5">
+            {% for user in users %}
+                <option value="{{ user.id }}">{{ user.username }}</option>
+            {% endfor %}
+        </select>
+        <button type="button" id="useradd_btn">&darr;</button>
+    </div>
+    <div class="selects_circuit">
+        <select id="circuits_list" size="5">
+            {% for circuit in circuits %}
+                <option value="{{ circuit.id }}" data-ordre="{{ circuit.ordre }}">{{ circuit.name }}</option>
+            {% endfor %}
+        </select>
+        <button type="button" id="circuitadd_btn">&darr;</button>
+    </div>
+    <div id="circuit"></div>
 </div>
+
+
+
 <script type="text/javascript" src="{{ asset('/js/jquery-ui.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('/js/circuit.js') }}"></script>
-<script type="text/javascript">
-var circuiter = $("#users_list").circuiter({
-    users: new Array(3,1)
-});
-//moncircuit = circuiter.data("circuiter");
-//moncircuit.getCircuit();
-</script>
