--- a/web/css/style.css
+++ b/web/css/style.css
@@ -45,3 +45,61 @@ html, body{
     background-color: #ff19b3;
     cursor: pointer;
 }
+
+
+
+
+#circuit {
+    width: 100%;
+    min-height: 120px;
+    border: 1px solid #cccccc;
+}
+
+.selects_circuit {
+    display: inline-block;
+    width: 30%;
+}
+.selects_circuit select {
+    width: 100%;
+}
+
+
+.perso_circuit {
+    text-align: center;
+    cursor: pointer;
+    margin: 10px;
+}
+
+.perso_circuit img {
+    width: 80px;
+    height: 80px;
+    display: block;
+}
+
+.emplacement {
+    width: 80px;
+    height: 80px;
+    background-color: #eeeeee;
+}
+
+.fleche_circuit, .perso_circuit, .emplacement {
+    float: left;
+}
+
+.favoris_circuit {
+    height: 32px;
+    width: 32px;
+    cursor: pointer;
+}
+
+#pop_favoris {
+    display: none;
+    position: absolute;
+    border: 1px solid #cccccc;
+    padding: 10px;
+    background-color: #ffffff;
+}
+
+.delete_circuit {
+    cursor: pointer;
+}
