--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -26,4 +26,36 @@
             </nav>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+            <ul class="nav-bar">
+                <li class="has-flyout">
+                    <a href="" class="main">Lien #1</a>
+                    <a href="" class="flyout-toggle"><span> </span></a>
+                    <div class="flyout small">
+                        <ul>
+                            <li><a href="#">Lien #1-a</a></li>
+                            <li><a href="#">Lien #1-b</a></li>
+                            <li><a href="#">Lien #1-c</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="#" class="main">Lien #2</a></li>
+                <li class="has-flyout">
+                    <a href="" class="main">Lien #3</a>
+                    <a href="" class="flyout-toggle"><span> </span></a>
+                    <div class="flyout small">
+                        <ul>
+                            <li><a href="#">Lien #3-a</a></li>
+                            <li><a href="#">Lien #3-b</a></li>
+                            <li><a href="#">Lien #3-c</a></li>
+                            <li><a href="#">Lien #4-c</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="#" class="main">Lien #4</a></li>
+            </ul>
+        </div>
+    </div>
 {% endblock %}
