--- a/web/css/dropzone.css
+++ b/web/css/dropzone.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 .dropzone {
+    border-radius: 3px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.13);
+    margin: 30px 0;
+    cursor: pointer;
   position: relative;
   border: 1px solid rgba(0,0,0,0.08);
   background: rgba(0,0,0,0.02);
