--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6,42 +6,43 @@ html, body{
     height: 100%;
 
 }
-
-#header {
-    background-color: #cccccc;
-    height: 10%;
-}
-#main {
-    height: 80%;
-}
-
-#content {
-    height: 10%;
-}
-
-#menu, #content {
+#maman{
+    width: 100%;
     height: 100%;
 }
-
+/*-------------------------     DÉBUT MENU     -------------------------*/
+#lemenu{
+    min-height: 100%;
+    display: inline-block;
+    background: orange;
+    box-shadow: 2px 0 12px #3A3A3A;
+    z-index: 500;
+}
+/*-------------------------     FIN MENU =>  DÉBUT CONTENU     -------------------------*/
+#content {
+    background-color:greenyellow ;
+    min-height: 100%;
+    display: inline-block;
+}
+#header {
+    background-color: #cccccc;
+    min-height: 12%;
+}
+#lecontent {
+    background-color: lightseagreen;
+    min-height: 70%;
+}
 #footer {
     background-color: pink;
-    height: 10%;
+    min-height: 18%;
+    min-width: 97%;
+    text-align: center;
+    position:absolute;
+    bottom: 0px;
+
  }
-
-.dropzone {
-    border-radius: 3px;
-    box-shadow: 0 0 50px rgba(0, 0, 0, 0.13);
-    margin: 30px 0;
-    padding: 4px;
-    cursor: pointer;
-}
-
-.dz-details {
-    float: left;
-    height: 80px;
-}
-
 .user-row:hover, .classeur-row:hover {
     background-color: #ff19b3;
     cursor: pointer;
 }
+/*-------------------------     FIN CONTENU     -------------------------*/
