--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -1,24 +1,13 @@
 {% extends 'SesileMainBundle:Default:index.html.twig' %}
 
 {% block content %}
-    <h1>Nouveau classeur</h1>
-
-    <br/>
-
-
-
-
-
-    <form class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
-
+<div class="titre_page">Déposer un nouveau classeur</div>
+    <br>
+<form class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
         <div class="row">
-
             <div class="col-md-12">
-
-
                 <div class="form-group">
                     <label for="type" class="col-sm-2 control-label">Type</label>
-
                     <div class="col-sm-10">
                         <select id="type" name="type">
                             <option value="elclassico" selected>Classique</option>
@@ -26,41 +15,17 @@
                         </select>
                         <img id="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
                     </div>
-
-
                 </div>
-
-
             </div>
-
         </div>
-
-
         <div id="contenttypedform"></div>
-
-
-
-
     </form>
-
-
-
-
-
-
     <br/>
-
     <a href="{{ path('classeur') }}">
         Retour à la liste des classeur
     </a>
-
-
 {% endblock %}
-
 
 {% block losjavascriptos %}
     <script type="text/javascript" src="{{ asset("/bundles/sesileclasseur/js/newclasseur.js") }}"></script>
-
-
-
 {% endblock %}
