--- a/web/css/style.css
+++ b/web/css/style.css
@@ -17,6 +17,7 @@ html, body{
     background: orange;
     box-shadow: 2px 0 12px #3A3A3A;
     z-index: 500;
+    padding: 0 !important;
 }
 /*-------------------------     FIN MENU =>  DÉBUT CONTENU     -------------------------*/
 #content {
@@ -24,25 +25,103 @@ html, body{
     min-height: 100%;
     display: inline-block;
 }
+
 #header {
     background-color: #cccccc;
     min-height: 12%;
 }
+
 #lecontent {
-    background-color: lightseagreen;
+    width: 90%;
+    margin: auto;
+    background-color: #ffffff;
     min-height: 70%;
+    padding: 10px;
 }
+
 #footer {
     background-color: pink;
     min-height: 18%;
     min-width: 97%;
     text-align: center;
-    position:absolute;
     bottom: 0px;
+}
 
- }
 .user-row:hover, .classeur-row:hover {
     background-color: #ff19b3;
     cursor: pointer;
 }
 /*-------------------------     FIN CONTENU     -------------------------*/
+
+.titre_page {
+    font-size: 1.5em;
+    text-transform: uppercase;
+    color: #222222;
+    border-bottom: 3px dotted #555555;
+}
+
+.titre_form_element {
+    background-color: #3285ab;
+    margin: 10px 0 10px 0;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+#documentcontent {
+    border: 5px dashed #cccccc;
+}
+
+#circuit {
+    width: 100%;
+    min-height: 120px;
+    border: 1px solid #cccccc;
+}
+
+.selects_circuit {
+    display: inline-block;
+    width: 30%;
+}
+
+.selects_circuit select {
+    width: 100%;
+}
+
+.perso_circuit {
+    text-align: center;
+    cursor: pointer;
+    margin: 10px;
+}
+
+.perso_circuit img {
+    width: 80px;
+    height: 80px;
+    display: block;
+}
+
+.emplacement {
+    width: 80px;
+    height: 80px;
+    background-color: #eeeeee;
+}
+
+.fleche_circuit, .perso_circuit, .emplacement {
+    float: left;
+}
+
+.favoris_circuit {
+    height: 32px;
+    width: 32px;
+    cursor: pointer;
+}
+
+#pop_favoris {
+    display: none;
+    position: absolute;
+    border: 1px solid #cccccc;
+    padding: 10px;
+    background-color: #ffffff;
+}
+
+.delete_circuit {
+    cursor: pointer;
+}
