--- a/web/css/style.css
+++ b/web/css/style.css
@@ -4,38 +4,37 @@
 }
 html, body{
     height: 100%;
-
 }
-#maman{
-    width: 100%;
+
+#maman {
+    background-color: #cccccc;
+    width:100%;
     height: 100%;
 }
+
+
 /*-------------------------     DÉBUT MENU     -------------------------*/
 #lemenu{
     min-height: 100%;
-    display: inline-block;
     background: orange;
     box-shadow: 2px 0 12px #3A3A3A;
-    z-index: 500;
-    padding: 0 !important;
+    z-index: 2;
 }
 /*-------------------------     FIN MENU =>  DÉBUT CONTENU     -------------------------*/
 #content {
-    background-color:greenyellow ;
     min-height: 100%;
+    background-color:greenyellow ;
     display: inline-block;
 }
 
 #header {
     background-color: #cccccc;
-    min-height: 12%;
 }
 
 #lecontent {
     width: 90%;
     margin: auto;
     background-color: #ffffff;
-    min-height: 70%;
     padding: 10px;
 }
 
