CSS trop bien avec une page d'accuel low cost

--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -34,28 +34,30 @@
         </div>
         <div id="lecontent">
             {% block content %}
-                <div id="bienvenue">
-                    Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant
-                    impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand
-                    un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de
-                    polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la b<br>
-                    Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant
-                    impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand
-                    un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de
-                    polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la b<br>
-                    Le Lorem
+                <div class="bloc_accueil">
+                    <div id="bienvenue">
+                        <div class="titre_bloc_accueil">Bienvenue</div>
+                        Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant
+                        impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand
+                        un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de
+                    </div>
                 </div>
-                <div id="classeurs_a_valider"></div>
-                <div id="liste_classeurs"></div>
+                <div class="bloc_accueil">
+                    <div id="classeurs_a_valider">
+                        <div class="titre_bloc_accueil">Classeurs à valider</div>
+                        {% render url("liste_classeurs") %}
+                    </div>
+                    <div id="liste_classeurs">
+                        <div class="titre_bloc_accueil">Classeurs visibles</div>
+                        {% render url("liste_classeurs") %}
+                    </div>
+                </div>
             {% endblock %}
         </div>
         <div class="" id="footer">
             BLABLA
         </div>
         {% block losjavascriptos %}
-            <script type="text/javascript">
-
-            </script>
         {% endblock %}
     </div>
 </div>
