--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'SesileMainBundle:Default:index.html.twig' %}
 
 {% block content %}
+    <h1>Liste des classeurs</h1>
     {% include 'SesileClasseurBundle:Classeur:liste.html.twig' %}
+    <a href="{{ path('classeur_new') }}">Créer un classeur</a>
 {% endblock %}
